--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
-h1 { color: brown; }
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+
+body {
+  display: flex;
+  flex-direction: column;
+  background-color: #e5e5e5;
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  overflow-x: hidden;
+
+  
