--- a/style.css
+++ b/style.css
@@ -564,7 +564,6 @@ body.active {
 
 .go-newmes:hover {
   transform: scale(1.1);
-  background-color: rgb(19, 4, 72);
   color: rgb(223, 225, 230);
 }
 
@@ -582,7 +581,7 @@ body.active {
   justify-content: center;
   align-items: center;
   width: 375px;
-  height: 2500px;
+  height: 3200px;
   margin: 0 auto;
   background-color: #f8f9fa;
   gap: 2px;
@@ -767,7 +766,7 @@ body.active {
   box-sizing: border-box;
 }
 
-.event9 {
+.JavaScript1 {
   display: flex;
   align-items: flex-center;
   gap: 20px;
@@ -780,16 +779,16 @@ body.active {
   margin-top: 50px;
 }
 
-.event9 img {
+.JavaScript1 img {
   width: 48px;
   height: 48px;
   left: 12px;
   top: calc(50% - 48px / 2 - 0.36px);
 }
 
-.event9 p,
-.event10 li,
-.event11 li {
+.JavaScript1 p,
+.HTML1 li,
+.CSS1 li {
   height: 24px;
   left: 76px;
   right: 12px;
@@ -805,7 +804,7 @@ body.active {
   list-style-type: none;
 }
 
-.event10 {
+.HTML1 {
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -819,7 +818,7 @@ body.active {
   left: 12px;
 }
 
-.event10 img {
+.HTML1 img {
   width: 48px;
   height: 48px;
   left: 12px;
@@ -827,7 +826,7 @@ body.active {
   background: url(html5-512.png);
 }
 
-.event11 {
+.CSS1 {
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -841,7 +840,7 @@ body.active {
   left: 12px;
 }
 
-.event11 img {
+.CSS1 img {
   width: 48px;
   height: 48px;
   top: calc(50% - 48px / 2 - 0.36px);
