--- a/style.css
+++ b/style.css
@@ -564,7 +564,8 @@ body.active {
 
 .go-newmes:hover {
   transform: scale(1.1);
-  color: rgb(223, 225, 230);
+  background-color: rgb(23, 2, 100);
+  color: rgb(235, 235, 255);
 }
 
 .contact-me {
@@ -850,7 +851,7 @@ body.active {
 
 .lang {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   margin-left: -20px;
   gap: 12px;
