--- a/style.css
+++ b/style.css
@@ -549,23 +549,23 @@ body.active {
   height: 48px;
   left: 0;
   top: calc(50% - 48px / 2);
-  border: 1px solid #6070ff;
+  border: 1px solid #fff;
   border-radius: 8px;
-  background-color: #fff;
+  background-color: #6070ff;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
   display: flex;
-  color: #396df2;
+  color: #fff;
   transition: transform 0.4s ease-in-out;
 }
 
 .go-newmes:hover {
   transform: scale(1.1);
-  background-color: rgb(23, 2, 100);
-  color: rgb(235, 235, 255);
+  background-color: rgb(34, 48, 210);
+  color: rgb(255, 255, 240);
 }
 
 .contact-me {
@@ -769,7 +769,7 @@ body.active {
 
 .JavaScript1 {
   display: flex;
-  align-items: flex-center;
+  align-items: center;
   gap: 20px;
   width: 255px;
   height: 66.72px;
@@ -787,7 +787,7 @@ body.active {
   top: calc(50% - 48px / 2 - 0.36px);
 }
 
-.JavaScript1 p,
+.JavaScript1 li,
 .HTML1 li,
 .CSS1 li {
   height: 24px;
@@ -851,7 +851,7 @@ body.active {
 
 .lang {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-left: -20px;
   gap: 12px;
